--- a/linearbunny/requirements.txt
+++ b/linearbunny/requirements.txt
@@ -1,57 +1,66 @@
-absl-py==0.9.0
-astunparse==1.6.3
-cachetools==4.1.0
-certifi==2020.6.20
-chardet==3.0.4
-chart-studio==1.1.0
-click==7.1.2
-cycler==0.10.0
-Flask==1.1.2
-gast==0.3.3
-google-auth==1.18.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.29.0
-h5py==2.10.0
-idna==2.9
-importlib-metadata==1.6.1
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.15.1
-Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
-Markdown==3.2.2
-MarkupSafe==1.1.1
-matplotlib==3.2.2
-numpy==1.19.0
-oauthlib==3.1.0
-opt-einsum==3.2.1
-pandas==1.0.5
-plotly==4.8.1
-protobuf==3.12.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rsa==4.6
-scikit-learn==0.23.1
-scipy==1.4.1
-seaborn==0.10.1
-six==1.15.0
-sklearn==0.0
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
-urllib3==1.25.9
-Werkzeug==1.0.1
-wincertstore==0.2
-wrapt==1.12.1
-zipp==3.1.0
-
+absl-py                   0.9.0                    pypi_0    pypi
+astunparse                1.6.3                    pypi_0    pypi
+ca-certificates           2020.1.1                      0
+cachetools                4.1.0                    pypi_0    pypi
+certifi                   2020.6.20                py37_0
+chardet                   3.0.4                    pypi_0    pypi
+chart-studio              1.1.0                    pypi_0    pypi
+click                     7.1.2                    pypi_0    pypi
+cycler                    0.10.0                   pypi_0    pypi
+flask                     1.1.2                    pypi_0    pypi
+gast                      0.3.3                    pypi_0    pypi
+google-auth               1.18.0                   pypi_0    pypi
+google-auth-oauthlib      0.4.1                    pypi_0    pypi
+google-pasta              0.2.0                    pypi_0    pypi
+grpcio                    1.29.0                   pypi_0    pypi
+h5py                      2.10.0                   pypi_0    pypi
+idna                      2.9                      pypi_0    pypi
+importlib-metadata        1.6.1                    pypi_0    pypi
+itsdangerous              1.1.0                    pypi_0    pypi
+jinja2                    2.11.2                   pypi_0    pypi
+joblib                    0.15.1                   pypi_0    pypi
+keras-preprocessing       1.1.2                    pypi_0    pypi
+kiwisolver                1.2.0                    pypi_0    pypi
+markdown                  3.2.2                    pypi_0    pypi
+markupsafe                1.1.1                    pypi_0    pypi
+matplotlib                3.2.2                    pypi_0    pypi
+numpy                     1.19.0                   pypi_0    pypi
+oauthlib                  3.1.0                    pypi_0    pypi
+openssl                   1.1.1g               he774522_0
+opt-einsum                3.2.1                    pypi_0    pypi
+pandas                    1.0.5                    pypi_0    pypi
+pip                       20.1.1                   py37_1
+plotly                    4.8.1                    pypi_0    pypi
+protobuf                  3.12.2                   pypi_0    pypi
+pyasn1                    0.4.8                    pypi_0    pypi
+pyasn1-modules            0.2.8                    pypi_0    pypi
+pyparsing                 2.4.7                    pypi_0    pypi
+python                    3.7.7                h81c818b_4
+python-dateutil           2.8.1                    pypi_0    pypi
+pytz                      2020.1                   pypi_0    pypi
+requests                  2.24.0                   pypi_0    pypi
+requests-oauthlib         1.3.0                    pypi_0    pypi
+retrying                  1.3.3                    pypi_0    pypi
+rsa                       4.6                      pypi_0    pypi
+scikit-learn              0.22.1                   pypi_0    pypi
+scipy                     1.4.1                    pypi_0    pypi
+seaborn                   0.10.1                   pypi_0    pypi
+setuptools                47.3.1                   py37_0
+six                       1.15.0                   pypi_0    pypi
+sklearn                   0.0                      pypi_0    pypi
+sqlite                    3.32.3               h2a8f88b_0
+tensorboard               2.2.2                    pypi_0    pypi
+tensorboard-plugin-wit    1.6.0.post3              pypi_0    pypi
+tensorflow                2.2.0                    pypi_0    pypi
+tensorflow-estimator      2.2.0                    pypi_0    pypi
+termcolor                 1.1.0                    pypi_0    pypi
+threadpoolctl             2.1.0                    pypi_0    pypi
+urllib3                   1.25.9                   pypi_0    pypi
+vc                        14.1                 h0510ff6_4
+vs2015_runtime            14.16.27012          hf0eaf9b_2
+werkzeug                  1.0.1                    pypi_0    pypi
+wheel                     0.34.2                   py37_0
+wincertstore              0.2                      py37_0
+wrapt                     1.12.1                   pypi_0    pypi
+zipp                      3.1.0                    pypi_0    pypi
+zlib                      1.2.11               h62dcd97_4
